# ecommerce-modern-data-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_data.py
src/ecommerce_platform/synthetic/: config.py  customers.py  products.py  validators.py
