[project]
name = "ecommerce-modern-data-platform"
version = "0.1.0"
description = "Modern data engineering portfolio project with synthetic data generation, dbt, Dagster, and CI/CD."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker==37.1.0",
    "numpy==2.1.1",
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]